styles.css
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
  background: black;
  color: white;
  margin: 0;
}

h1 {
  margin: 0;
  text-align: center;
  font-family: "Roboto Slab", serif;
  padding: 0;
}

p {
  font-family: "Open Sans", sans-serif;
}

header {
  margin: 4rem;
}

.logo {
  font-family: "Playfair Display";
  font-size: 60px;
  color: #dfabea;
  font-weight: 900;
}

.web-element a {
  display: block;
  padding: 1.5rem;
  color: white;

}

.web-element a:hover {
  color: #dfabea
}

.flex-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: stretch;
  flex-wrap: wrap;
}

.web-element {
  padding: 2rem;
  margin: 10px;
  border: 2px solid #dfabea;
}

.web-element + .web-element {
  margin-left: 1rem;
}

picture {
  display: block;
  margin: 0 auto;
  height: auto;
}

picture img {
  max-width: 300px;
}

.footer-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 4rem;
}

.footer-content {
  display: flex;
  flex-direction: row;
}

.footer-content a {
  text-decoration: none;
  padding: 0px;
  /* border-radius: 0.5rem; */
}

.footer-content > * + * {
  margin-left: 1rem;
}

.btn-social {
  display: inline-flex;
  width: 3rem;
  height: 3rem;
  justify-content: center;
  align-items: center;
}

.footer-content svg:hover {
  fill: #dfabea;
}

.footer-content svg {
  fill: white;
  height: auto;
  width: 64px;
}

